--- a/navbar.html
+++ b/navbar.html
@@ -25,10 +25,10 @@
         <header>
             <img class="logo" src="logo.png" alt="logo">
             <nav>
-                <!-- <input type="checkbox" id="check">
+                <input type="checkbox" id="check">
                 <label for="check" class="checkbutton">
                     <i class="fa fa-bars"></i>
-                </label> -->
+                </label>
                 <ul class="nav_links">
                     <li>
                         <a href="#">Create</a>
