--- a/login.html
+++ b/login.html
@@ -7,9 +7,19 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
-        
+        <!-- <script> 
+            // $(function(){
+                $("#includedContent").load("/navbar.html"); 
+            // });        
+        </script>cript src="jquery.js"></script>  -->
+        <!-- <s -->
     </head>
     <body>
+        <div w3-include-html="navbar.html"></div>
+        <nav class="navbar">
+            
+        </nav>
+
         <!-- <div w3-include-html="navbar.html"></div> -->
 
     </body>
