--- a/create.html
+++ b/create.html
@@ -20,9 +20,9 @@
           <label for="email">Email: </label>
           <input type="email" placeholder="Email">
           <br>
-          <label for="password">Password: </label>
+          <!-- <label for="password">Password: </label>
           <input type="password" placeholder="Password">
-          <br>
+          <br> -->
           <label for="phone">Phone: </label>
           <input type="tel" placeholder="(123)-456-7890">
           <br>
