added multiple things here to not loose them and not clutter other branches

--- a/Login_RegistraitonForm.html
+++ b/Login_RegistraitonForm.html
@@ -113,7 +113,7 @@
                 
             </div>
         </div>
-        <script src="/js/registrationHandler.js" async></script>
-        <script src="/js/Login_Register.js" async></script>
+        <script src="./js/registrationHandler.js" async></script>
+        <script src="./js/Login_Register.js" async></script>
     </body>
 </html>
