--- a/contacts.html
+++ b/contacts.html
@@ -3,12 +3,71 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Contacts</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="">
+        <!-- bootstrap setup -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <!-- <link rel="stylesheet" href="styles.css"> -->
+        <style>
+          .table-card {
+              border: 1px solid #ccc;
+              border-radius: 10px !important;
+              overflow: hidden;
+              transition: transform 0.2s;
+          }
+          .table th {
+            border: none;
+            text-transform: uppercase;
+            color: #2a2e34;
+          }
+          
+      </style>
     </head>
     <body>
+      <div class="container mt-5">
+        <h1>Contacts</h1>
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Email</th>
+                <th scope="col">Time</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="table-card">
+                <td>Mark</td>
+                <td>123456789</td>
+                <td>markotto@gmail.com</td>
+                <td>3 minutes ago</td>
+
+              </tr>
+
+              <tr class="table-card">
+                <td>Mark</td>
+                <td>123456789</td>
+                <td>markotto@gmail.com</td>
+                <td>3 minutes ago</td>
+              </tr>
+
+              <tr class="table-card">
+                <td>Mark</td>
+                <td>123456789</td>
+                <td>markotto@gmail.com</td>
+                <td>3 minutes ago</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+        <!-- bootstrap jquery's -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         
     </body>
 </html>
