--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="">
         <!-- bootstrap setup -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <!-- <link rel="stylesheet" href="styles.css"> -->
+        <script src="https://kit.fontawesome.com/5d8ee741cc.js" crossorigin="anonymous"></script>
         <style>
           .table-card {
               border: 1px solid #ccc;
@@ -21,6 +21,18 @@
             border: none;
             text-transform: uppercase;
             color: #2a2e34;
+          }
+          #icons {
+            color: transparent;
+
+          }
+          button {
+            border: none;
+            background-color: transparent;
+          }
+
+          button:hover {
+            transform: scale(1.1);            
           }
           
       </style>
@@ -36,6 +48,7 @@
                 <th scope="col">Phone</th>
                 <th scope="col">Email</th>
                 <th scope="col">Time</th>
+                <th scope="col" id="icons"></th>
               </tr>
             </thead>
             <tbody>
@@ -44,7 +57,8 @@
                 <td>123456789</td>
                 <td>markotto@gmail.com</td>
                 <td>3 minutes ago</td>
-
+                <td><button class><i class="fa-solid fa-pencil"></i></button>
+                <button class><i class="fa-solid fa-trash"></i></button></tr>
               </tr>
 
               <tr class="table-card">
@@ -52,6 +66,8 @@
                 <td>123456789</td>
                 <td>markotto@gmail.com</td>
                 <td>3 minutes ago</td>
+                <td><button class><i class="fa-solid fa-pencil"></i></button>
+                <button class><i class="fa-solid fa-trash"></i></button></tr>
               </tr>
 
               <tr class="table-card">
@@ -59,6 +75,8 @@
                 <td>123456789</td>
                 <td>markotto@gmail.com</td>
                 <td>3 minutes ago</td>
+                <td><button class><i class="fa-solid fa-pencil"></i></button>
+                <button class><i class="fa-solid fa-trash"></i></button></tr>
               </tr>
             </tbody>
           </table>
