--- a/contacts.html
+++ b/contacts.html
@@ -11,11 +11,18 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/5d8ee741cc.js" crossorigin="anonymous"></script>
         <style>
+            #more {
+                text-align: center;
+            }
           .table-card {
-              border: 1px solid #ccc;
-              border-radius: 10px !important;
-              overflow: hidden;
-              transition: transform 0.2s;
+                border: 1px solid #ccc;
+                /* border-left: 1px !important; */
+                /* box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2); */
+                border-radius: 10px !important;
+                overflow: hidden;
+                transition: transform 0.2s;
+                margin-bottom: 10px !important;
+                
           }
           .table th {
             border: none;
