--- a/SignUp.html
+++ b/SignUp.html
@@ -98,6 +98,10 @@
                     <input type="text" class="form-control" id="last" placeholder="Last">
                 </div>
               </div>
+              <div class="form-group">
+                <label for="phone_inp">Phone</label>
+                <input type="tel" class="form-control" id="phone_inp" placeholder="(123)-457-789">
+            </div>
             <div class="form-group">
                 <label for="email_inp">Email</label>
                 <input type="email" class="form-control" id="email_inp" placeholder="abc@gmail.com">
@@ -106,6 +110,7 @@
                 <label for="passwrd_inp">Password</label>
                 <input type="password" class="form-control" id="passwrd_inp" placeholder="Password">
             </div>
+            
             <button type="submit">Sign Up</button>
             <small id="signUp" class="form-text text-muted">Have an account? <a href="#">Login</a></small>
 
