--- a/contacts.html
+++ b/contacts.html
@@ -68,6 +68,10 @@
       </style>
     </head>
     <body>
+
+        <header>
+            <!-- <iframe src="navbar.html"></iframe> -->
+        </header>
       <div class="container mt-5">
         <!-- TODO: move search bar and contacts on same line -->
         <h1>Contacts</h1>
@@ -131,7 +135,8 @@
                     <button class="btn btn-primary" type="button" data-toggle="dropdown" id="more"><i class="fa-solid fa-ellipsis"></i></button>
                     <div class="dropdown-menu" aria-labelledby="more">
                         <a class="dropdown-item" href="edit.html">Edit</a>
-                        <a class="dropdown-item" href="#">Delete</a>
+                        <!-- TODO: overlay of delete -->
+                        <a class="dropdown-item" href="delete.html">Delete</a>
                       </div>
                   </div>
                 </td>
