--- a/login.html
+++ b/login.html
@@ -97,7 +97,7 @@
                 <input type="password" class="form-control" id="passwrd_inp" placeholder="Password">
             </div>
             <button type="submit">Login</button>
-            <small id="signUp" class="form-text text-muted">Need an account? <a href="#">Sign Up</a></small>
+            <small id="signUp" class="form-text text-muted">Need an account? <a href="signup.html">Sign Up</a></small>
 
         </form>
     </div>
