--- a/SignUp.html
+++ b/SignUp.html
@@ -112,7 +112,7 @@
             </div>
             
             <button type="submit">Sign Up</button>
-            <small id="signUp" class="form-text text-muted">Have an account? <a href="#">Login</a></small>
+            <small id="signUp" class="form-text text-muted">Have an account? <a href="login.html">Login</a></small>
 
         </form>
     </div>
