--- a/edit.html
+++ b/edit.html
@@ -131,9 +131,9 @@
                 <label for="passwrd_inp">Password</label>
                 <input type="password" class="form-control" id="passwrd_inp" placeholder="Password">
             </div>
-            
+            <center>
             <button type="submit">Save</button>
-            <!-- TODO: Center the button -->
+            </center>
 
         </form>
     </div>
