--- a/create.html
+++ b/create.html
@@ -127,9 +127,9 @@
                 <label for="email_inp">Email</label>
                 <input type="email" class="form-control" id="email_inp" placeholder="abc@gmail.com">
             </div>
-            
+            <center>
             <button type="submit">Save</button>
-            <!-- TODO: Center the button -->
+            </center>
 
         </form>
     </div>
