--- a/index.html
+++ b/index.html
@@ -1,4 +1,133 @@
 <!DOCTYPE html>
 <html>
-    <h1>test index page</h1>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                overflow: hidden;
+            }
+
+            .container {
+                margin: 0px 0px !important;
+            }
+            .overlay {
+                display: none;
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(255, 255, 255);
+                z-index: 999;
+                transition: .3s;
+                justify-content: center;
+                align-items: center;
+            }
+            .card {
+                position: relative;
+                padding: 1rem;
+                /* margin: 1rem -15px 0; */
+                border: solid #f8f9fa;
+                /* border-width: 0.2rem 0 0;             */
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                /* align-items: center;     */
+                box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+                text-align: left;
+                
+            }
+            button {
+                text-transform: uppercase;
+                letter-spacing: 2.5px;
+                border: none;
+                border-radius: 20px;
+                box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+                background-color: #fff;
+                padding: 1vh 6vh;
+                margin: 10px;
+                background-color: rgba(199, 41, 97, 1);
+                color: white;
+            }
+            button:hover {
+                
+                color: white;
+                transform: scale(1.01);
+            }
+            #heading {
+                text-transform: uppercase;
+                font-size: 3.4vh;
+                padding-top: 2vh;
+                padding-bottom: 2vh;
+                text-align: center;
+
+            }
+            small {
+                padding: 10px 10px;
+                padding-top: 2px;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="container mt-5 h-100">
+            <div class="row h-100 justify-content-center align-items-center">
+                <div class="col-md-6 text-center">
+                            <h1 class="card-title">Welcome!</h1>
+                            <p class="card-text">Manage your contacts with ease.</p>
+                            <a href="#" class="btn btn-primary" id="login">Login</a>
+                            <a href="#" class="btn btn-secondary" id="signup">Sign Up</a>
+                </div>
+            </div>
+        </div>
+        <div class="overlay">
+            <center>
+                <div class="container mt-5">
+                    <form class="card" style="width: 60vh;">
+                        <h1 id="heading">Login</h1>
+                        <div class="form-group">
+                            <label for="email_inp">Email</label>
+                            <input type="email" class="form-control" id="email_inp" placeholder="abc@gmail.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="passwrd_inp">Password</label>
+                            <input type="password" class="form-control" id="passwrd_inp" placeholder="Password">
+                        </div>
+                        <button type="submit">Login</button>
+                        <small id="footerTxt" class="form-text text-muted">Need an account? <a href="#">Sign Up</a></small>
+                    </form>
+                </div>
+            </center>
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script>
+            const login = document.getElementById('login');
+            const overlay = document.querySelector('.overlay');
+            login.addEventListener('click', () => {
+                // document.getElementById('first').value = '';
+                // document.getElementById('last').value = '';
+                // document.getElementById('phone_inp').value = '';
+                // document.getElementById('email_inp').value = '';
+                // const head = document.getElementById('heading');
+                // head.textContent = 'Login';
+
+                // Show the overlay and modal
+                overlay.style.display = 'flex';
+            });
+        </script>
+    </body>
 </html>
