fixed crud logout since it should never say login

--- a/crud.html
+++ b/crud.html
@@ -70,7 +70,7 @@
         <header>
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#"><img src="logo.png" alt="Home" width="50"></a>
-                <a href="login.html" id="login" class="btn ml-auto">Login</a>
+                <a href="index.html" id="login" class="btn ml-auto">Logout</a>
             </nav>
         </header>
         <div class="container mt-3">
@@ -155,19 +155,19 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script>
             // ------login------------------------
-            function loginStatus () {
-                let isLoggedIn = false;
-                const logButton = document.getElementById('login');
-                if (isLoggedIn) {
-                    // logout(); // TODO: from backend
-                    logButton.textContent = 'Logout'
-                }
-                else {
-                    logButton.textContent = 'Login'
-                }
-            }
+            // function loginStatus () {
+            //     let isLoggedIn = true;
+            //     const logButton = document.getElementById('login');
+            //     if (isLoggedIn) {
+            //         // logout(); // TODO: from backend
+            //         logButton.textContent = 'Logout'
+            //     }
+            //     else {
+            //         logButton.textContent = 'Login'
+            //     }
+            // }
 
-            loginStatus();
+            // loginStatus();
             // ------------------------------------------
 
             // -------table----------------------------
