--- a/crud.html
+++ b/crud.html
@@ -31,7 +31,7 @@
                 width: 150px;
                 border-bottom: 1px solid #ccc;
             }
-            #create:hover {
+            #create:hover, #close:hover {
                 transform: scale(1.1);
             }
             #login {
@@ -81,6 +81,10 @@
                 <div class="col-auto">
                     <button id="create" class="icon"><i class="fa-solid fa-plus"></i></button>
                     <div class="overlay">
+                        <nav class="navbar navbar-expand-lg">
+                            <a class="icon" id="close"><i class="fa-solid fa-chevron-left"></i></a>
+                            <a href="index.html" id="loginC" class="btn ml-auto">Logout</a>
+                        </nav>
                         <div class="container mt-5">
                             <form class="container mt-5" style="width: 60vh;">
                                 <h1 id="heading">Create Contact</h1>
@@ -154,30 +158,14 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script>
-            // ------login------------------------
-            // function loginStatus () {
-            //     let isLoggedIn = true;
-            //     const logButton = document.getElementById('login');
-            //     if (isLoggedIn) {
-            //         // logout(); // TODO: from backend
-            //         logButton.textContent = 'Logout'
-            //     }
-            //     else {
-            //         logButton.textContent = 'Login'
-            //     }
-            // }
-
-            // loginStatus();
-            // ------------------------------------------
-
             // -------table----------------------------
             // const jsonData = [
             //     { "FirstName": "John", "LastName": "Doe", "Email": "john@example.com", "Phone": "1234567890", "Time": new Date(2023, 0, 1, 12, 30)},
             //     { "FirstName": "Jane", "LastName": "Smith", "Email": "jane@example.com", "Phone": "9876543210", "Time": new Date(2023, 0, 2, 14, 15)},
             // ];
             const jsonData = [
-                { id: 1, "FirstName": "John", "LastName": "Doe", "Email": "john@example.com", "Phone": "1234567890", "Time": new Date(2023, 0, 1, 12, 30)},
-                { id: 2, "FirstName": "Jane", "LastName": "Smith", "Email": "jane@example.com", "Phone": "9876543210", "Time": new Date(2023, 0, 2, 14, 15)},
+                { contact_id: 1, "first_name": "John", "last_name": "Doe", "email": "john@example.com", "phone": "1234567890", "date": new Date(2023, 0, 1, 12, 30)},
+                { contact_id: 2, "first_name": "Jane", "last_name": "Smith", "email": "jane@example.com", "phone": "9876543210", "date": new Date(2023, 0, 2, 14, 15)},
             ];
             function populateTable(data) {
                 const tableBody = document.getElementById('table-body');
@@ -197,10 +185,10 @@
                 const timeCell = document.createElement('td');
                 const opsCell = document.createElement('td');
 
-                nameCell.textContent = item.FirstName + ' ' + item.LastName;
-                emailCell.textContent = item.Email;
-                phoneCell.textContent = formatPhoneN(item.Phone);
-                timeCell.textContent = formatTime(item.Time);
+                nameCell.textContent = item.first_name + ' ' + item.last_name;
+                emailCell.textContent = item.email;
+                phoneCell.textContent = formatPhoneN(item.phone);
+                timeCell.textContent = formatTime(item.date);
                 // let format4 = 
                 // console.log(format4); // 23-7-2022
                 opsCell.appendChild(createDropdownMenu(item));
@@ -319,14 +307,14 @@
                 if (editContactId) {
                     // TODO: input_correct
                     const editedContact = {
-                        "id": editContactId, // Add the ID to the edited contact
-                        "FirstName": firstName,
-                        "LastName": lastName,
-                        "Email": email,
-                        "Phone": phone,
-                        "Time": time,
+                        "contact_id": editContactId, // Add the ID to the edited contact
+                        "first_name": firstName,
+                        "last_name": lastName,
+                        "email": email,
+                        "phone": phone,
+                        "date": time,
                     };
-                    const index = jsonData.findIndex(item => item.id == editContactId);
+                    const index = jsonData.findIndex(item => item.contact_id == editContactId);
 
                     if (index !== -1) {
                         jsonData[index] = editedContact;
@@ -350,11 +338,11 @@
                     // js object with the contact data
                     const newContact = {
                         // id: number-from-backEnd,
-                        "FirstName": firstName,
-                        "LastName": lastName,
-                        "Email": email,
-                        "Phone": phone,
-                        "Time": new Date(),
+                        "first_name": firstName,
+                        "last_name": lastName,
+                        "email": email,
+                        "phone": phone,
+                        "data": new Date(),
                     };
                 // }
                 // add the new contact to the array we print from = api
@@ -391,35 +379,36 @@
                 head.textContent = 'Edit Contact';
 
 
-                document.getElementById('first').value = data.FirstName;
-                document.getElementById('last').value = data.LastName;
-                document.getElementById('phone_inp').value = data.Phone;
-                document.getElementById('email_inp').value = data.Email;
+                document.getElementById('first').value = data.first_name;
+                document.getElementById('last').value = data.last_name;
+                document.getElementById('phone_inp').value = data.phone;
+                document.getElementById('email_inp').value = data.email;
 
                 const saveButton = document.getElementById('createBtn');
-                saveButton.dataset.editContactId = data.id;
-                console.log(data.id);
+                saveButton.dataset.editContactId = data.contact_id;
+                console.log(data.contact_id);
             }
             // -------------------------------------------
 
             // -------------delete-------------------------
+            const confirmButton = document.getElementById('confirmDelete');
             function deleteEventHandler(item) {
-                const confirmButton = document.getElementById('confirmDelete');
-                confirmButton.dataset.contactId = item.id;
+                confirmButton.dataset.contact_id = item.contact_id;
+                // confirmButton.dataset.contactId = item.contact_id;
 
                 // Show the confirmation modal
                 $('#confirmationModal').modal('show');
             }
-            document.getElementById('confirmDelete').addEventListener('click', function() {
-                const contactId = this.dataset.contactId;
+            const deleteConfirmed = document.getElementById('confirmDelete');
+            deleteConfirmed.addEventListener('click', function() {
+                const contactId = deleteConfirmed.dataset.contact_id;
                 if (contactId) {
                     deleteContact(contactId);
                     $('#confirmationModal').modal('hide'); // Hide the modal
                 }
             });
             function deleteContact(contactId) {
-
-                const index = jsonData.findIndex(item => item.id == contactId);
+                const index = jsonData.findIndex(item => item.contact_id == contactId);
 
                 if (index !== -1) {
                     jsonData.splice(index, 1);
@@ -431,6 +420,17 @@
             }
             // --------------------------------------------
 
+            // ------------close---------------------------
+            const close = document.getElementById('close');
+            close.addEventListener('click', function() {
+                overlay.style.display = 'none';
+                document.getElementById('first').value = '';
+                document.getElementById('last').value = '';
+                document.getElementById('phone_inp').value = '';
+                document.getElementById('email_inp').value = '';
+
+            });
+            // --------------------------------------------
 
         </script>
     </body>
