--- a/crud.html
+++ b/crud.html
@@ -40,6 +40,13 @@
             #login:hover {
                 color: pink;
             }
+            #loginC {
+                color: #2a2e34;
+            }
+            #loginC:hover {
+                color: pink;
+            }
+            
             .table th {
                 border: none;
                 text-transform: uppercase;
@@ -62,7 +69,6 @@
                 padding-top: 2vh;
                 padding-bottom: 2vh;
                 text-align: center;
-
             }
         </style>
         <script type="module" src="js/search.js"></script>
@@ -70,7 +76,7 @@
     <body>
         <header>
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#"><img src="logo.png" alt="Home" width="50"></a>
+                <a class="navbar-brand" href="#"><img src="logo.png" alt="Home" width="50px"></a>
                 <a href="index.html" id="login" class="btn ml-auto">Logout</a>
             </nav>
         </header>
@@ -83,7 +89,7 @@
                     <button id="create" class="icon"><i class="fa-solid fa-plus"></i></button>
                     <div class="overlay">
                         <nav class="navbar navbar-expand-lg">
-                            <a class="icon" id="close"><i class="fa-solid fa-chevron-left"></i></a>
+                            <a class="" id="close"><i class="fa-solid fa-chevron-left"></i></a>
                             <a href="index.html" id="loginC" class="btn ml-auto">Logout</a>
                         </nav>
                         <div class="container mt-5">
@@ -160,11 +166,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script>
             // -------table----------------------------
-            // const jsonData = [
-            //     { "FirstName": "John", "LastName": "Doe", "Email": "john@example.com", "Phone": "1234567890", "Time": new Date(2023, 0, 1, 12, 30)},
-            //     { "FirstName": "Jane", "LastName": "Smith", "Email": "jane@example.com", "Phone": "9876543210", "Time": new Date(2023, 0, 2, 14, 15)},
-            // ];
-            // const jsonData = [
+            // // const jsonData = [
             //     { contact_id: 1, "first_name": "John", "last_name": "Doe", "email": "john@example.com", "phone": "1234567890", "date": new Date(2023, 0, 1, 12, 30)},
             //     { contact_id: 2, "first_name": "Jane", "last_name": "Smith", "email": "jane@example.com", "phone": "9876543210", "date": new Date(2023, 0, 2, 14, 15)},
             // ];
