added invalid email and fixed the bug about reloading page when button clicked

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </nav> -->
             <center>
                 <div class="container mt-5">
-                    <form class="card" style="width: 60vh;">
+                    <form class="card" id="loginForm" style="width: 60vh;">
                         <h1 id="heading">Login</h1>
                         <div class="form-group">
                             <label for="email_inp">Email</label>
