--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </div>
             </div>
         </div>
-        <div class="loginOverlay">
+        <div class="loginOverlay" style="opacity: 0;">
             <header class="header">
                 <nav class="navbar navbar-expand-lg">
                     <a id="closeL"><i class="fa-solid fa-chevron-left"></i></a>
@@ -197,7 +197,7 @@
                 </center>
             </div>
         </div>
-        <div class="signupOverlay">
+        <div class="signupOverlay" style="opacity: 0;">
             <header class="header">
                 <nav class="navbar navbar-expand-lg">
                     <a class="" id="closeS"><i class="fa-solid fa-chevron-left"></i></a>
