Duplicate-checks-Format-checks-api

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </header>
             <div class="container mt-5">
                 <center>
-                    <form class="card" style="width: 60vh;" id="loginForm">
+                    <form class="card" style="width: 60vh;" id="RegisterForm">
                         <h1 id="heading">Sign Up</h1>
                         <div class="form-row">
                             <div class="form-group col-md-6">
